# ashare-ai

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-TW.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/workflows/: deploy-mcp.yml
ashare-plugin/.claude-plugin/: plugin.json
ashare-plugin/skills/ashare/: SKILL.md  ashare-rules.md  best-practices.md  context7-guide.md  data-bridge.md  data-reference.md  dataframe-reference.md  debugging-guide.md  factor-analysis-reference.md  factor-examples.md  known-issues.md  machine-learning-reference.md
finlab-plugin/skills/finlab/: SKILL.md
mcp-server/: __init__.py  __main__.py  server.py
workers/: build.sh  pyproject.toml  wrangler.toml
workers/src/: main.py
